fixed datagrid styles so it will display the same way regardless of viewport height; changed page select to drop up to avoid being cut off

--- a/src/less/components/_datagrid.less
+++ b/src/less/components/_datagrid.less
@@ -1,10 +1,14 @@
 .datagrid__container {
     height: 100%;
+    position: relative;
 
     .datagrid__table {
-        max-height: 85%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 20px;
         overflow-y: auto;
-        margin-bottom: 10px;
+        margin-bottom: 25px;
 
         .griddle {
             text-align: center;
@@ -127,10 +131,15 @@
     }
 
     .datagrid__pager {
-        .grid-justify(space-between);
+        .grid-justify(flex-start);
 
-        width: 15%;
-        margin: 0 0 0 2px;
+        position: absolute;
+        bottom: 5px;
+        left: 0;
+
+        button {
+            margin: 0 5px;
+        }
     }
 
 }
